--- a/styles/index.css
+++ b/styles/index.css
@@ -399,7 +399,7 @@ footer p {
   .first-view {
     display: grid;
     padding-top: 4rem;
-    height: 90vw;
+    height: 90vh;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     width: 90%;
     margin: 0 auto;
