--- a/styles/index.css
+++ b/styles/index.css
@@ -40,7 +40,7 @@ body {
 main {
   overflow-x: hidden;
   position: relative;
-  border: 0.5rem solid;
+  border: 1rem solid;
   scrollbar-width: none;
 }
 nav {
@@ -132,7 +132,7 @@ nav p {
   width: 90vw;
 }
 h1 {
-  font-size: 7.8rem;
+  font-size: 8rem;
   text-transform: uppercase;
   white-space: pre-wrap;
   font-weight: 700;
@@ -442,6 +442,7 @@ footer p {
   }
   .description {
     display: grid;
+    align-items: center;
   }
 
   .description p {
@@ -453,6 +454,7 @@ footer p {
   }
   h3 {
     text-align: center;
+    white-space: nowrap;
   }
   .poll {
     width: 35rem;
@@ -476,9 +478,14 @@ footer p {
     line-height: 2.8rem;
   }
 }
-@media screen and (max-width: 1024px) {
-  .description p,
+@media only screen and (max-width: 1024px) {
   .image {
     grid-column: 1;
+    margin-top: 2rem;
+  }
+}
+@media only screen and (min-device-width: 768px) and (max-device-width: 1020px) and (orientation: portrait) {
+  .triangel {
+    border-right: 0;
   }
 }
