--- a/styles/index.css
+++ b/styles/index.css
@@ -190,7 +190,6 @@ h1 {
 
 .description p,
 .app-description {
-  width: 50rem;
   font-weight: 300;
   line-height: 3rem;
   white-space: break-spaces;
@@ -440,6 +439,9 @@ footer p {
     line-height: 13rem;
     font-weight: 800;
   }
+  .app-description {
+    width: 50rem;
+  }
   .shapes {
     display: grid;
     grid-auto-rows: 28rem;
@@ -448,7 +450,7 @@ footer p {
   }
   .rectangle {
     margin-top: 3rem;
-    height: 15rem;
+    height: 16rem;
     width: 30rem;
   }
   .triangel {
@@ -458,13 +460,13 @@ footer p {
     border-bottom: 26rem solid var(--green);
   }
   .circle {
-    margin-top: -2rem;
-    width: 26rem;
-    height: 26rem;
+    margin-top: -3rem;
+    width: 30rem;
+    height: 30rem;
   }
   .sqaure {
-    width: 23rem;
-    height: 23rem;
+    width: 25rem;
+    height: 25rem;
   }
   .description {
     display: grid;
@@ -496,7 +498,7 @@ footer p {
   .highlight {
     padding: 4rem;
     margin: 0 auto;
-    width: 90%;
+    width: 95%;
   }
 
   .highlight p {
