--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,7 @@
 }
 *:focus {
   outline: 0;
-  color: var(--pink);
+  color: var(--green);
 }
 
 :root {
@@ -60,11 +60,15 @@ nav {
   height: 3rem;
 }
 nav button,
-.side-menu a {
+.side-menu button {
   font-size: 2rem;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 300;
+}
+button {
+  border: none;
+  background-color: transparent;
 }
 nav button {
   margin-left: 3rem;
@@ -392,7 +396,7 @@ footer p {
   font-size: 2rem;
 }
 .error-404 a:hover {
-  color: var(--pink);
+  color: var(--green);
 }
 @keyframes rotation {
   from {
