Add theme color to footer text

--- a/styles/index.css
+++ b/styles/index.css
@@ -382,6 +382,7 @@ footer {
   align-items: center;
   justify-content: center;
   font-size: 1.4rem;
+  color: var(--color);
 }
 footer p {
   letter-spacing: 0.2rem;
@@ -390,6 +391,7 @@ footer p {
 footer a {
   text-decoration: underline;
   font-size: 1.4rem;
+  color: var(--color);
 }
 .error-404 {
   display: flex;
